--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@ header {
   background-color: #f8f9fa;
 }
 
+.logo {
+  position: absolute;
+  left: 20px; /* Push logo to the left */
+}
+
 .logo img {
   display: block;
 }
@@ -36,6 +41,18 @@ header {
   width: 100%;
   height: 100%;
   object-fit: cover; /* Ensures the image fills the container */
+}
+
+/* Site Title Styles */
+.site-title {
+  position: absolute;
+  top: 20px; /* Adjust top position as needed */
+  left: 50%;
+  transform: translateX(-50%);
+  color: black; /* Change text color to black */
+  font-size: 2em; /* Adjust font size as needed */
+  text-align: center;
+  z-index: 1; /* Ensure it appears above the header image */
 }
 
 /* Bottom Navigation Styling */
@@ -63,18 +80,6 @@ header {
 
 .menu a:hover {
   text-decoration: underline;
-}
-
-/* Site Title Styles */
-.site-title {
-  position: absolute;
-  top: 20px; /* Adjust top position as needed */
-  left: 50%;
-  transform: translateX(-50%);
-  color: white; /* Change color based on your header image */
-  font-size: 2em; /* Adjust font size as needed */
-  text-align: center;
-  z-index: 1; /* Ensure it appears above the header image */
 }
 
 /* Hero Section Styles */
