--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,12 @@ footer {
   z-index: 1000;
 }
 
+#cart-view ul {
+  list-style-type: none; /* Remove bullet points */
+  padding: 0;
+  margin: 0;
+}
+
 main {
   display: flex;
   flex-direction: column;
