--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,15 @@ body {
   height: auto;
 }
 
-.site-title {
+.header-image .logo {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 100px;
+  height: auto;
+}
+
+.header-image .site-title {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -25,7 +33,8 @@ body {
   font-family: 'Trebuchet MS', sans-serif;
   font-size: 40px;
   font-weight: bold;
-  color: #1E1B1C; /* Primary: Barbell Black */
+  color: white;
+  text-shadow: 2px 2px 4px #000;
 }
 
 nav {
@@ -82,11 +91,6 @@ footer {
   text-align: center;
   padding: 20px;
   background-color: #ffffee; /* Background: Ivory Incline */
-}
-
-.header-image .logo {
-  width: 100px;
-  height: auto;
 }
 
 #cart-view {
